[package]
name = "tql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.16.1"
swc_ecma_ast = "0.64.0"
swc_ecma_codegen = "0.88.0"
dprint-core = "0.47.1"
dprint-plugin-typescript = "0.59.2"
structopt = "0.3"
graphql-tools = "0.0.15"
graphql-parser = "0.4.0"
swc_atoms = "0.2.9"

[package.metadata]
# no precompiled binaries of `wasm-opt` are available for this platform, you'll want to set `$WASM_OPT` to a preinstalled `wasm-opt` command or disable via `wasm-opt = false` in your manifest
wasm-opt = false
